--- a/.editorconfig
+++ b/.editorconfig
@@ -21,8 +21,10 @@ trim_trailing_whitespace=true
 
 # ReSharper properties
 resharper_align_multiline_calls_chain=true
+resharper_align_multiline_extends_list=true
 resharper_csharp_align_multiline_parameter=true
 resharper_csharp_wrap_before_invocation_rpar=true
+resharper_csharp_wrap_extends_list_style=chop_if_long
 resharper_csharp_wrap_lines=true
 resharper_csharp_wrap_parameters_style=chop_always
 resharper_wrap_array_initializer_style=wrap_if_long
@@ -335,6 +337,8 @@ dotnet_naming_symbols.stylecop_private_fields_group.applicable_kinds=field
 dotnet_naming_rule.stylecop_private_fields_must_be_camel_case_rule.symbols=stylecop_private_fields_group
 dotnet_naming_rule.stylecop_private_fields_must_be_camel_case_rule.style=camel_case_style
 dotnet_naming_rule.stylecop_private_fields_must_be_camel_case_rule.severity=warning
+dotnet_naming_rule.stylecop_private_fields_must_be_camel_case_rule.prefix_underscore=true
+
 
 # Private readonly fields must be _camelCase
 dotnet_naming_rule.private_members_with_underscore.symbols=private_fields
