--- a/src/StartupProjectManager.Services/StartupProjectManager.Services.csproj
+++ b/src/StartupProjectManager.Services/StartupProjectManager.Services.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="5.1.4" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="3.1.3" />
     <PackageReference Include="Serilog" Version="2.9.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
   </ItemGroup>
