--- a/src/StartupProjectManager.Ui/StartupProjectManager.Ui.csproj
+++ b/src/StartupProjectManager.Ui/StartupProjectManager.Ui.csproj
@@ -22,6 +22,28 @@
   <ItemGroup>
     <None Remove="App.ico" />
     <None Remove="appsettings.json" />
+    <None Remove="Images\Add.png" />
+    <None Remove="Images\AddSub.png" />
+    <None Remove="Images\AddSub_16px.png" />
+    <None Remove="Images\AddSub_48px.png" />
+    <None Remove="Images\Add_16px.png" />
+    <None Remove="Images\Add_48px.png" />
+    <None Remove="Images\App.bmp" />
+    <None Remove="Images\AppIcon.bmp" />
+    <None Remove="Images\AppIcon.ico" />
+    <None Remove="Images\AppIcon.png" />
+    <None Remove="Images\Application.png" />
+    <None Remove="Images\Cancel.png" />
+    <None Remove="Images\Cancel_16px.png" />
+    <None Remove="Images\Cancel_48px.png" />
+    <None Remove="Images\Document.png" />
+    <None Remove="Images\Project.png" />
+    <None Remove="Images\Remove.png" />
+    <None Remove="Images\Remove_16px.png" />
+    <None Remove="Images\Remove_48px.png" />
+    <None Remove="Images\Save.png" />
+    <None Remove="Images\Save_16px.png" />
+    <None Remove="Images\Save_48px.png" />
     <None Remove="startupProjectManager.db" />
   </ItemGroup>
   
@@ -31,12 +53,18 @@
 
 <PackageReference Include="Autofac.Configuration" Version="5.1.0" />
 
-<PackageReference Include="Caliburn.Micro" Version="4.0.105-alpha" />
+<PackageReference Include="Caliburn.Micro" Version="3.2.0" />
+
+<PackageReference Include="Caliburn.Micro.AutofacBootstrap" Version="3.0.1.17" />
+
+<PackageReference Include="Caliburn.Micro.Core" Version="3.2.0" />
 
 <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.3">
   <PrivateAssets>all</PrivateAssets>
   <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 </PackageReference>
+
+<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="3.1.3" />
 
 <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.3" />
 
@@ -54,14 +82,46 @@
 
 <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
 
-<PackageReference Include="Syncfusion.Shared.WPF" Version="18.1.0.46" />
-<PackageReference Include="Syncfusion.Tools.WPF" Version="18.1.0.42" />
-<PackageReference Include="Syncfusion.SfSkinManager.WPF" Version="18.1.0.42" />
-<PackageReference Include="Syncfusion.Themes.Metro.Wpf" Version="18.1.0.42" />
+<PackageReference Include="Syncfusion.Shared.WPF" Version="18.1.0.48" />
+<PackageReference Include="Syncfusion.Tools.WPF" Version="18.1.0.48" />
+<PackageReference Include="Syncfusion.SfSkinManager.WPF" Version="18.1.0.48" />
+<PackageReference Include="Syncfusion.Themes.Metro.Wpf" Version="18.1.0.48" />
 </ItemGroup>
   
   <ItemGroup>
-    <Resource Include="Images\App.ico" />
+    <Content Include="Images\Add.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\AddSub.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\AppIcon.bmp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\AppIcon.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\AppIcon.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\Application.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\Cancel.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\Document.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\Project.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\Remove.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\Save.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="startupProjectManager.db">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
